<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout"
 >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">


        <RelativeLayout
            android:layout_marginRight="8dp"
            android:id="@+id/relativeLayout"
            android:layout_width="64dp"
            android:layout_height="64dp">

            <ImageView
                android:layout_height="match_parent"
                android:id="@+id/food_image"
                android:layout_width="match_parent"

                app:srcCompat="@drawable/example_food" />

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/mask"

                android:layout_alignLeft="@+id/food_image"
                android:layout_alignStart="@+id/food_image"
                android:layout_alignTop="@+id/food_image"
                app:srcCompat="@drawable/mask_round" />
        </RelativeLayout>

            <TextView
                android:id="@+id/recipeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/relativeLayout"
                android:layout_toRightOf="@id/relativeLayout"
                android:ellipsize="end"
                android:lines="1"
                android:text="Название рецепта"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/shortDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/relativeLayout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/recipeTitle"
                android:layout_toRightOf="@+id/relativeLayout"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingRight="8dp"
                android:text=""
                android:textColor="#999" />


        <com.github.aakira.expandablelayout.ExpandableLinearLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeLayout"
            android:orientation="vertical"
            app:ael_duration="150">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/info_main"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/protein"
                        android:textColor="#a77"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/proteinCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/protein" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fats"
                        android:textColor="#7a7"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fatsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fats" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/carbons"
                        android:textColor="#77a"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/carbonsCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/carbons" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/calories"
                        android:textColor="#aa7"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/caloriesCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/calories" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/ingredients"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ingrList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/tools"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/toolsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
            <Button
                android:textColor="#fff"
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start"/>
        </com.github.aakira.expandablelayout.ExpandableLinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>


</FrameLayout>
